2005-12-04  Bruno Haible  <bruno@clisp.org>

	* csharpcomp.sh.in: Suffix for resources is .resources, not .resource.

2005-12-04  Bruno Haible  <bruno@clisp.org>

	Cygwin portability.
	* progreloc.c: Include <windows.h> also on Cygwin.
	(find_executable): Add support for Cygwin.
	(set_program_name_and_installdir): Handle also platforms with nonempty
	EXEEXT.
	* relocatable.c: Include <windows.h> also on Cygwin.
	(DllMain): Add support for Cygwin.
	(get_shared_library_fullname): Update.
	* relocwrapper.c (add_dotbin): Handle also platforms with nonempty
	EXEEXT.
	Patches partially from Charles Wilson <cygwin@cwilson.fastmail.fm>.

2005-10-09  Bruno Haible  <bruno@clisp.org>

	* c-strcasestr.h: New file.
	* c-strcasestr.c: New file, based on gnulib's strcasestr.c.
	* Makefile.am (libgettextlib_la_SOURCES): Add them.

2005-10-06  Bruno Haible  <bruno@clisp.org>

	* addext.c: Test HAVE_CONFIG_H using #ifdef.
	* argmatch.c: Likewise.
	* backupfile.c: Likewise.
	* c-strcasecmp.c: Likewise.
	* c-strncasecmp.c: Likewise.
	* canonicalize.c: Likewise.
	* closeout.c: Likewise.
	* exitfail.c: Likewise.
	* fnmatch.c: Likewise.
	* full-write.c: Likewise.
	* fwriteerror.c: Likewise.
	* getline.c: Likewise.
	* getndelim2.c: Likewise.
	* getopt_.h: Likewise.
	* hash.c: Likewise.
	* memmove.c: Likewise.
	* quote.c: Likewise.
	* quotearg.c: Likewise.
	* readlink.c: Likewise.
	* safe-read.c: Likewise.
	* setenv.c: Likewise.
	* strcspn.c: Likewise.
	* strerror.c: Likewise.
	* strstr.c: Likewise.
	* strtol.c: Likewise.
	* unsetenv.c: Likewise.
	* xgetcwd.c: Likewise.
	* xmalloc.c: Likewise.
	* xreadlink.c: Likewise.
	* xsetenv.c: Likewise.
	* xstrdup.c: Likewise.
	Reported by Ralf Wildenhues on bug-gnulib.

2005-10-03  Bruno Haible  <bruno@clisp.org>

	* hash.h (hash_insert_entry): Return a pointer instead of int.
	* hash.c (hash_insert_entry): Return a pointer to the copy of the key.

2005-10-03  Bruno Haible  <bruno@clisp.org>

	* hash.h: Add comments everywhere.